--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-cayman
 title: welcome to the OYJY's homepage!
 description: feel free to bookmark this page to keep an eye on my progression
+
+layout: page
+title: GDB
+pepermalink: /Doc/
