--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: welcome to the OYJY's homepage!
 description: feel free to bookmark this page to keep an eye on my progression
 
 layout: page
-title: GDB
+title: GDB!!!!!!!!!!!!!!!!!!!
 permalink: /Doc/
