--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,18 @@
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - CONTRIBUTING.md
+  - README.md
+  - LICENSE.md
+  - COPYING.md
+  - CODE_OF_CONDUCT.md
+  - CONTRIBUTING.md
+  - ISSUE_TEMPLATE.md
+  - PULL_REQUEST_TEMPLATE.md
+ 
 theme: jekyll-theme-cayman
 title: welcome to the OYJY's homepage!
 description: feel free to bookmark this page to keep an eye on my progression
