--- a/_config.yml
+++ b/_config.yml
@@ -16,3 +16,4 @@ include:
 theme: jekyll-theme-cayman
 title: welcome to the OYJY's homepage!
 description: feel free to bookmark this page to keep an eye on my progression
+page-title: Page
