--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ include:
   - PULL_REQUEST_TEMPLATE.md
  
 theme: jekyll-theme-cayman
-title: welcome to the OYJY's homepage!
+title: Homepage!
 description: feel free to bookmark this page to keep an eye on my progression
 page-title: Page
