--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,7 @@
 {
   "promptDelete": false,
   "showLineNumber": false,
-  "readableLineLength": false
+  "readableLineLength": true,
+  "livePreview": true,
+  "vimMode": false
 }
