init shaders and programs; Template Type Deduction

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
   "accentColor": "#009dff",
-  "theme": "obsidian",
-  "cssTheme": "AnuPpuccin"
+  "theme": "moonstone",
+  "cssTheme": "GitHub Theme"
 }
