Basic Of Distributed System

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,9 @@
 {
   "accentColor": "#009dff",
   "theme": "moonstone",
-  "cssTheme": "GitHub Theme"
+  "cssTheme": "GitHub Theme",
+  "enabledCssSnippets": [
+    "snippets"
+  ],
+  "baseFontSize": 17
 }
