--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -4,5 +4,12 @@
   "readableLineLength": true,
   "livePreview": true,
   "vimMode": false,
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
